Se agrega manejo de log. Se redefine estados y operaciones para realizar cambios de estados para Cronograma e IntervaloCronogra. Se incorpora el cambio de estado de Cronograma en la aplicación de administración. Pruebas exitosas.

--- a/planificacion/templates/admin/planificacion/cronograma/change_form.html
+++ b/planificacion/templates/admin/planificacion/cronograma/change_form.html
@@ -3,6 +3,9 @@
 
 {% block object-tools-items %}
     <li><a href="/planificacion/planificar/{{object_id}}/" class="historylink">{% trans "Planificar" %}</a></li>
+    <li><a href="/planificacion/invalidar/{{object_id}}/" class="historylink">{% trans "Invalidar" %}</a></li>
+    <li><a href="/planificacion/activar/{{object_id}}/" class="historylink">{% trans "Activar" %}</a></li>
+    <li><a href="/planificacion/desactivar/{{object_id}}/" class="historylink">{% trans "Desactivar" %}</a></li>
     <li><a href="/admin/planificacion/intervalocronograma/?cronograma__id__exact={{object_id}}" class="historylink" target='_blank'>{% trans "Ver en reporte" %}</a></li>
     <li><a href="/planificacion/calendario/cronograma/{{object_id}}/" class="historylink" target='_blank'>{% trans "Ver en calendario" %}</a></li>
     <li><a href="history/" class="historylink">{% trans "Historial" %}</a></li>
