Se agrega la recuperación de máquinas y sus intervalos, para una fecha dada utilizando REST. Se implementa el serializador y la vista correspondiente para realizar esta tarea.

--- a/app/templates/app/intervalo/detalle.html
+++ b/app/templates/app/intervalo/detalle.html
@@ -2,7 +2,7 @@
 <div ng-repeat='intervalo in intervalos'>
   <h1>Intervalo #{{ intervalo.id }}</h1>
   <ul>
-    <li>Máquina: {{ intervalo.maquina }}</li>
+    <li>Máquina: {{ intervalo.maquina.descripcion }}</li>
     <li>Fecha desde: {{ intervalo.fecha_desde | date:'HH:mm' }}</li>
     <li>Fecha hasta: {{ intervalo.fecha_hasta | date:'HH:mm' }}</li>
   </ul>
