--- a/planificacion/templates/planificacion/cronograma/timeline.html
+++ b/planificacion/templates/planificacion/cronograma/timeline.html
@@ -90,20 +90,25 @@
             callback: function(result){
                 if (!result)
                     return;
+                dhtmlx.message({text:'{% trans "Cancelando intervalos..." %}', expire: -1});
                 schEvent = scheduler.getEvent(id);
                 schEvent.intervalo.cancelar({
 
                     success: function(data){
-                        var idsIntervalosCancelados = jQuery.parseJSON(data);
+                        var respuesta = jQuery.parseJSON(data);
+                        var idsIntervalosCancelados = respuesta.ids_intervalos_cancelados;
                         for(i=0; i<idsIntervalosCancelados.length; i++){
                             event_id = scheduler.getEventIdFromIntervaloId(idsIntervalosCancelados[i]);
                             scheduler.deleteEvent(event_id);
                         }
-                        dhtmlx.message({text:"Exito", expire: -1});
+                        for (i=0; i<respuesta.mensajes.length; i++){
+                            mensaje = respuesta.mensajes[i];
+                            dhtmlx.message({text:mensaje, expire: -1});
+                        }
                     },
 
                     error: function(data){
-                        var errores = jQuery.parseJSON(data.responseText);
+                        var errores = jQuery.parseJSON(data.responseText).mensajes;
                         for (i=0; i<errores.length; i++){
                             mensaje = errores[i];
                             dhtmlx.message({ type:"error", text:mensaje, expire: -1});
@@ -188,12 +193,18 @@
             tarea: '{{ intervalo.tarea}}',
             cantidad: '{{ intervalo.cantidad}}',
             cancelar: function(settings){
-              (function($){
-                $.get(
-                  "{% url 'cancelar_intervalo' intervalo.id %}",
-                  settings.success
-                  ).fail(settings.error);
-              })(jQuery);
+                (function($){
+                    $.get(
+                        "{% url 'cancelar_intervalo' intervalo.id %}",
+                        function(data){
+                            settings.success(data);
+                            }
+                        ).fail(
+                            function(data){
+                                settings.error(data)
+                                }
+                            );
+                })(jQuery);
             },
           },
           {% with fd=intervalo.get_fecha_desde fh=intervalo.get_fecha_hasta %}
