--- a/planificacion/templates/planificacion/cronograma/timeline.html
+++ b/planificacion/templates/planificacion/cronograma/timeline.html
@@ -4,230 +4,91 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<title>Timeline View Demo - dhtmlxScheduler</title>
-	<meta name="description" content="This demo shows a JavaScript event calendar in Timeline View where the users can manage and track the ongoing tasks or projects.">
-	<meta name="keywords" content="javascript, scheduler, event calendar, events calendar, event, calendar, ajax, google-like">
-</head>
+
+    <!--DHTMLX-->
     <link rel="STYLESHEET" type="text/css" href="/static/dhtmlx/suite/codebase/dhtmlx.css">
     <script src="/static/dhtmlx/suite/codebase/dhtmlx.js" type="text/javascript"></script>
 	<script src='/static/dhtmlxScheduler_v4.1.0/dhtmlxScheduler_v4.1.0/codebase/dhtmlxscheduler.js' type="text/javascript" charset="utf-8"></script>
 	<script src='/static/dhtmlxScheduler_v4.1.0/dhtmlxScheduler_v4.1.0/codebase/ext/dhtmlxscheduler_timeline.js' type="text/javascript" charset="utf-8"></script>
-  <script src="/static/dhtmlxScheduler_v4.1.0/dhtmlxScheduler_v4.1.0/codebase/ext/dhtmlxscheduler_units.js" type="text/javascript" charset="utf-8"></script>
-  <script src="/static/dhtmlxScheduler_v4.1.0/dhtmlxScheduler_v4.1.0/codebase/ext/dhtmlxscheduler_minical.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/static/dhtmlxScheduler_v4.1.0/dhtmlxScheduler_v4.1.0/codebase/ext/dhtmlxscheduler_units.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/static/dhtmlxScheduler_v4.1.0/dhtmlxScheduler_v4.1.0/codebase/ext/dhtmlxscheduler_minical.js" type="text/javascript" charset="utf-8"></script>
 
-	
-  <script src="/static/jquery.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" href="/static/dhtmlxScheduler_v4.1.0/dhtmlxScheduler_v4.1.0/codebase/dhtmlxscheduler.css" type="text/css" title="no title" charset="utf-8">
+    <script src="/static/dhtmlxScheduler_v4.1.0/dhtmlxScheduler_v4.1.0/codebase/ext/dhtmlxscheduler_quick_info.js"></script>
+    <script src="/static/dhtmlxScheduler_v4.1.0/dhtmlxScheduler_v4.1.0/codebase/locale/locale_es.js" charset="utf-8"></script>
 
-  {%comment%}
-  <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="/static/bootstrap/css/bootstrap-theme.css">
-  {%endcomment%}
-  <script src="/static/bootstrap/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
-	
-  <link rel="stylesheet" href="/static/dhtmlxScheduler_v4.1.0/dhtmlxScheduler_v4.1.0/codebase/dhtmlxscheduler.css" type="text/css" title="no title" charset="utf-8">
+    <!--jQuery-->
+    <script src="/static/jquery.js" type="text/javascript" charset="utf-8"></script>
 
-  <script src="/static/dhtmlxScheduler_v4.1.0/dhtmlxScheduler_v4.1.0/codebase/ext/dhtmlxscheduler_quick_info.js"></script>
-  <script src="/static/dhtmlxScheduler_v4.1.0/dhtmlxScheduler_v4.1.0/codebase/locale/locale_es.js" charset="utf-8"></script>
+    <!--Estilo necesario para la visualización correcta del scheduler.-->
+    <style type="text/css" media="screen">
+        html, body{
+            height:100%;
+            overflow:hidden;
+        }	
+    </style>
 
-<style type="text/css" media="screen">
-	html, body{
-		margin:0px;
-		padding:0px;
-		height:100%;
-		overflow:hidden;
-	}	
-	.one_line{
-		white-space:nowrap;
-		overflow:hidden;
-		padding-top:5px; padding-left:5px;
-		text-align:left !important;
-	}
-</style>
+    <script type="text/javascript" src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
 
-<script type="text/javascript" charset="utf-8">
+    <script type="text/javascript" src="/static/planificacion/js/intervalo.js"></script>
+    <script type="text/javascript" src="/static/planificacion/js/scheduler.js"></script>
+</head>
 
-  function get_color_range(value){
-    return (value*24)%192;
+<script>
+    
+    function init(){
+
+        var maquinas=[
+            {% for maquina in maquinas %}
+                {id:{{maquina.id}}, descripcion:"{{maquina.descripcion}}"},
+            {% endfor %}
+        ];
+
+
+        {%with f=fecha_inicio%}
+            fechaInicio = new Date({{f.year}},{{f.month}}-1,{{f.day}});
+        {%endwith%}
+
+        intervalos = []
+        {%for intervalo in intervalos%}
+            intervalos.push(
+                    new Intervalo(
+                        {{ intervalo.id }},
+                        {
+                            id:{{intervalo.pedido.id}},
+                            descripcion:'{{ intervalo.pedido.descripcion}}',
+                        },
+                        {
+                            id: '{{ intervalo.item.id }}',
+                        },
+                        {
+                            id:{{intervalo.producto.id}},
+                            descripcion:'{{ intervalo.producto.descripcion}}',
+                        },
+                        {
+                            id:{{intervalo.maquina.id}},
+                            descripcion:'{{ intervalo.maquina.descripcion}}',
+                        },
+                        {
+                            id:{{intervalo.tarea.id}},
+                            descripcion:'{{ intervalo.tarea.descripcion}}',
+                        },
+                        '{{intervalo.cantidad_tarea|floatformat:2}}',
+                        {% with fd=intervalo.get_fecha_desde fh=intervalo.get_fecha_hasta %}
+                            new Date({{fd.year}}, {{fd.month}}-1, {{fd.day}}, {{fd.hour}}, {{fd.minute}}),
+                            new Date({{fh.year}}, {{fh.month}}-1, {{fh.day}}, {{fh.hour}}, {{fh.minute}}),
+                        {% endwith %}
+                        "{% url 'cancelar_intervalo' intervalo.id %}"
+                        ));
+        {%endfor%}
+
+        crearScheduler(maquinas, fechaInicio, intervalos)
+
     }
 
-  function get_rgb_color(r,g,b,cuello_botella){
-    if (cuello_botella)
-      return 'rgb(255,0,0)';
-    return 'rgb('+get_color_range(r)+','+get_color_range(g)+','+get_color_range(b)+')'
-    }
-
-	function init() {
-		//window.resizeTo(950,700)
-		//modSchedHeight();
-
-    scheduler.locale.labels.timeline_tab = "{% trans "Línea Tmp" %}";
-    scheduler.locale.labels.unit_tab = "{% trans "Calendario" %}";
-    //scheduler.config.multi_day = true;
-		scheduler.locale.labels.section_custom="Section";
-		//scheduler.config.fix_tab_position = false;
-		//scheduler.config.details_on_create=true;
-		//scheduler.config.details_on_dblclick=true;
-		scheduler.config.xml_date="%Y-%m-%d %H:%i";
-    //scheduler.config.readonly=true;
-    scheduler.config.readonly_form=true;
-
-    //block all modifications
-    scheduler.attachEvent("onBeforeDrag",function(){return false;})
-
-    // -------------------------------------------------------
-    // Quick info
-    // -------------------------------------------------------
-    scheduler.templates.quick_info_content = function(start, end, ev){ 
-           return ev.details || ev.text;;
-           };
-    scheduler.config.quick_info_detached = true;
-
-    scheduler.config.icons_select = ['icon_ic_cancelar'];
-    scheduler.locale.labels.icon_ic_cancelar = "{% trans "Cancelar" %}";
-    scheduler._click.buttons.ic_cancelar = function(id){
-        schEvent = scheduler.getEvent(id);
-        schEvent.intervalo.cancelar();
-    };
-
-    scheduler.getEventIdFromIntervaloId = function(intervaloId){
-        return this.eventIdFromIntervaloId[intervaloId];
-    };
-
-    scheduler.initializeEventIntervaloMap = function(){
-        this.eventIdFromIntervaloId = {};
-        var events = this.getEvents();
-        for (i=0; i<events.length; i++){
-            var _event = events[i];
-            scheduler.eventIdFromIntervaloId[_event.intervalo.id] = _event.id;
-        }
-    }
-
-    scheduler.attachEvent("onClick",function(id, e){
-      return false;
-      })
-
-    scheduler.attachEvent("onDblClick",function(id, e){
-      return false;
-      })
-
-    scheduler.config.details_on_dblclick = false;
-    scheduler.config.dblclick_create = false;
-
-		scheduler.config.first_hour = 6
-		scheduler.config.last_hour = 23
-		//===============
-		//Configuration
-		//===============
-		var sections=[
-      {% for maquina in maquinas %}
-        {key:{{maquina.id}}, label:"{{maquina.descripcion}}"},
-      {% endfor %}
-		];
-		
-		scheduler.createTimelineView({
-			name:	"timeline",
-			x_unit:	"minute",
-			x_date:	"%H:%i",
-			x_step:	60,
-			x_size: 12,
-			x_start: 8,
-			x_length:	24,
-			y_unit:	sections,
-			y_property:	"section_id",
-			render:"bar"
-		});
-
-    scheduler.createUnitsView("unit","section_id",sections);
-		
-		//===============
-		//Data loading
-		//===============
-		scheduler.config.lightbox.sections=[	
-			{name:"description", height:130, map_to:"text", type:"textarea" , focus:true},
-			{name:"custom", height:23, type:"select", options:sections, map_to:"section_id" },
-			{name:"time", height:72, type:"time", map_to:"auto"}
-		]
-		
-    {%with f=fecha_inicio%}
-      scheduler.init('scheduler_here',new Date({{f.year}},{{f.month}}-1,{{f.day}}),"timeline");
-    {%endwith%}
-		scheduler.parse([
-      {%for intervalo in intervalos%}
-        {
-          intervalo:{
-            id: {{ intervalo.id }},
-            pedido: '{{ intervalo.pedido}}',
-            item: '{{ intervalo.item}}',
-            maquina: '{{ intervalo.maquina}}',
-            tarea: '{{ intervalo.tarea}}',
-            cantidad: '{{ intervalo.cantidad}}',
-            cancelar: function(settings){
-                (function($){
-
-                    dhtmlx.message({
-                        type:"confirm-warning", 
-                        text:'{% trans "¿Está seguro que desea cancelar el intervalo seleccionado y todos los intervalos dependientes?" %}',
-                        callback: function(result){
-                            if (!result)
-                                return;
-                            dhtmlx.message({text:'{% trans "Cancelando intervalos..." %}', expire: -1});
-                            $.get(
-                                "{% url 'cancelar_intervalo' intervalo.id %}",
-                                function(data){
-                                    var respuesta = jQuery.parseJSON(data);
-                                    var idsIntervalosCancelados = respuesta.ids_intervalos_cancelados;
-                                    for(i=0; i<idsIntervalosCancelados.length; i++){
-                                        event_id = scheduler.getEventIdFromIntervaloId(idsIntervalosCancelados[i]);
-                                        scheduler.deleteEvent(event_id);
-                                        }
-                                    for (i=0; i<respuesta.mensajes.length; i++){
-                                        mensaje = respuesta.mensajes[i];
-                                        dhtmlx.message({text:mensaje, expire: -1});
-                                        }
-                                    }
-                                ).fail(
-                                    function(data){
-                                        if (!data.responseText){
-                                            dhtmlx.message({
-                                                type:"error",
-                                                text:'{% trans "Ha ocurrido un error al intentar realizar la operación" %}',
-                                                expire: -1});
-                                            return;
-                                        }
-                                        var errores = jQuery.parseJSON(data.responseText).mensajes;
-                                        for (i=0; i<errores.length; i++){
-                                            mensaje = errores[i];
-                                            dhtmlx.message({ type:"error", text:mensaje, expire: -1});
-                                            }
-                                        }
-                                    );
-
-                            }
-                        });
-
-                })(jQuery);
-            },
-          },
-          {% with fd=intervalo.get_fecha_desde fh=intervalo.get_fecha_hasta %}
-            start_date: new Date({{fd.year}}, {{fd.month}}-1, {{fd.day}}, {{fd.hour}}, {{fd.minute}}),
-            end_date: new Date({{fh.year}}, {{fh.month}}-1, {{fh.day}}, {{fh.hour}}, {{fh.minute}}),
-          {% endwith %}
-          text:"#{{intervalo.pedido.id}}#{{intervalo.item.id}}:{{intervalo.tarea}}({{intervalo.item.producto}}):{{intervalo.cantidad_tarea}}",
-          section_id:{{intervalo.maquina.id}},
-          //color: get_rgb_color({{intervalo.maquina.id}},{{intervalo.tarea.id}},{{intervalo.item.id}},false),
-          color: get_rgb_color(128,{{intervalo.tarea.id}},{{intervalo.item.id}},false),
-        },
-      {% endfor %}
-		],"json");
-
-      scheduler.initializeEventIntervaloMap();
-	}
 </script>
-
-<body onload="init();"  
-{%comment%}
-onresize="modSchedHeight()"
-{%endcomment%}
->
+	
+<body onload="init();">
 	
 	
 	
@@ -241,15 +102,7 @@ onresize="modSchedHeight()"
             list-style: none;
         }
     </style>
-  {%comment%}
-	<script>
-		function modSchedHeight(){
-			var headHeight = 100;
-			var sch = document.getElementById("scheduler_here");
-			sch.style.height = (parseInt(document.body.offsetHeight)-headHeight)+"px";
-		}
-	</script>
-  {%endcomment%}
+
 	<div id="scheduler_here" class="dhx_cal_container" style='width:100%; height:100%;'>
 		<div class="dhx_cal_navline">
 			<div class="dhx_cal_prev_button">&nbsp;</div>
