Se implementa layout de 4 páneles, uno para el timeline, y los restantes se dejan para pedidos, items y estado de avance.

--- a/planificacion/static/planificacion/css/scheduler.css
+++ b/planificacion/static/planificacion/css/scheduler.css
@@ -1,3 +1,16 @@
+.hidden-templates{
+    display: none;
+}
+
+#quick-info-content ul{
+    list-style: none;
+}
+
 .item_selected{
     border: solid 2px red;
 }
+
+html, body{
+    height:100%;
+    overflow:hidden;
+}	
