--- a/planificacion/templates/planificacion/cronograma/timeline.html
+++ b/planificacion/templates/planificacion/cronograma/timeline.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<title>Timeline View Demo - dhtmlxScheduler</title>
+	<title>DjProd - Timeline</title>
 
     <!--DHTMLX-->
     <link rel="STYLESHEET" type="text/css" href="/static/dhtmlx/suite/codebase/dhtmlx.css">
@@ -21,29 +21,15 @@
     <!--jQuery-->
     <script src="/static/jquery.js" type="text/javascript" charset="utf-8"></script>
 
-    <!--Estilo necesario para la visualización correcta del scheduler.-->
-    <style type="text/css" media="screen">
-        html, body{
-            height:100%;
-            overflow:hidden;
-        }	
-    </style>
-
+    <!--Traducciones en javascript-->
     <script type="text/javascript" src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
 
+    <!--planificacion-->
     <script type="text/javascript" src="/static/planificacion/js/message.js"></script>
     <script type="text/javascript" src="/static/planificacion/js/intervalo.js"></script>
     <script type="text/javascript" src="/static/planificacion/js/scheduler.js"></script>
     <link rel="stylesheet" href="/static/planificacion/css/scheduler.css" type="text/css" title="no title" charset="utf-8">
 
-    <style type="text/css" media="screen">
-        .hidden-templates{
-            display: none;
-        }
-        #quick-info-content ul{
-            list-style: none;
-        }
-    </style>
 </head>
 
 <script>
@@ -99,7 +85,7 @@
                         ));
         {%endfor%}
 
-        planificacion.crearScheduler(scheduler, maquinas, fechaInicio, intervalos, 'scheduler_here')
+        new TimeLineConsole(scheduler, maquinas, fechaInicio, intervalos, document.body);
 
     }
 </script>
@@ -112,35 +98,16 @@
 			<div class="dhx_cal_next_button">&nbsp;</div>
 			<div class="dhx_cal_today_button"></div>
 			<div class="dhx_cal_date"></div>
-            <div class="dhx_minical_icon" id="dhx_minical_icon" 
-                onclick="show_minical()">&nbsp;</div>
-            <div class="dhx_cal_tab" name="month_tab" style="left:255px;"></div>
-            <div class="dhx_cal_tab" name="unit_tab"></div>
-			<div class="dhx_cal_tab" name="timeline_tab"></div>
+            <div class="dhx_minical_icon" id="dhx_minical_icon">&nbsp;</div>
+            <div class="dhx_cal_tab dhx_cal_tab_first" name="month_tab" style="right: auto; left: 14px;"></div>
+            <div class="dhx_cal_tab" name="unit_tab" style="right: auto; left: 75px;"></div>
+            <div class="dhx_cal_tab dhx_cal_tab_last" name="timeline_tab" style="right: auto; left: 136px;"></div>
 		</div>
 		<div class="dhx_cal_header">
 		</div>
 		<div class="dhx_cal_data">
 		</div>		
-	</div>
-
-	<script>
-        function show_minical(){
-            if (scheduler.isCalendarVisible()){
-                scheduler.destroyCalendar();
-            } else {
-                scheduler.renderCalendar({
-                    position:"dhx_minical_icon",
-                    date:scheduler._date,
-                    navigation:true,
-                    handler:function(date,calendar){
-                        scheduler.setCurrentView(date);
-                        scheduler.destroyCalendar()
-                    }
-                });
-            }
-        }
-    </script>
+    </div>
 
     <div id="hidden-templates">
         <div class='template-wrapper'>
