Se implementa la obtención del indice de planificación y de finalización para pedidos e items de pedidos. Pruebas exitosas para pedidos.

--- a/planificacion/templates/planificacion/cronograma/timeline.html
+++ b/planificacion/templates/planificacion/cronograma/timeline.html
@@ -48,10 +48,8 @@
                     id: {{pedido.id}},
                     descripcion: "{{pedido.descripcion}}",
                     estado: "{{pedido.descripcion_estado}}",
-                    //porcentaje_planificado: {{pedido.porcentaje_planificado}},
-                    //porcentaje_finalizado: {{pedido.porcentaje_finalizado}},
-                    porcentaje_planificado: 99.99,
-                    porcentaje_finalizado: 99.99,
+                    porcentaje_planificado: '{{pedido.porcentaje_planificado|floatformat:2}}',
+                    porcentaje_finalizado: '{{pedido.porcentaje_finalizado|floatformat:2}}',
                 }
             {% endfor %}
             ];
